--- a/appspec.yml
+++ b/appspec.yml
@@ -8,7 +8,12 @@ hooks:
     - location: scripts/install_dependencies
       timeout: 300
       runas: root
+  AfterInstall:
     - location: scripts/start_server
+      timeout: 300
+      runas: root
+  ApplicationStop:
+    - location: scripts/stop_server
       timeout: 300
       runas: root
 
